[gd_scene load_steps=8 format=3 uid="uid://cubfrh78hi1b4"]

[ext_resource type="Script" path="res://scenes/characters/player.gd" id="1_3vly6"]
[ext_resource type="Texture2D" uid="uid://k6751xavoeb" path="res://dodge_the_creeps_2d_assets/art/playerGrey_up1.png" id="1_l7f03"]
[ext_resource type="Texture2D" uid="uid://ewsetwulxepa" path="res://dodge_the_creeps_2d_assets/art/playerGrey_up2.png" id="2_il8tn"]
[ext_resource type="Texture2D" uid="uid://de06ib3qmli77" path="res://dodge_the_creeps_2d_assets/art/playerGrey_walk1.png" id="3_yxuca"]
[ext_resource type="Texture2D" uid="uid://bxri02j72vgep" path="res://dodge_the_creeps_2d_assets/art/playerGrey_walk2.png" id="4_jri2w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4upbk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_l7f03")
}, {
"duration": 1.0,
"texture": ExtResource("2_il8tn")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yxuca")
}, {
"duration": 1.0,
"texture": ExtResource("4_jri2w")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fsr6i"]
radius = 26.0
height = 66.0

[node name="Player" type="Area2D"]
script = ExtResource("1_3vly6")
metadata/_edit_group_ = true

[node name="AnimatedSprite2DPlayer" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_4upbk")
animation = &"walk"

[node name="CollisionShape2DPlayer" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_fsr6i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
